examples/test/testpolicy17059.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17059
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key37: value18
      key21: value0
      key49: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value10
          key18: value48
      podSelector:
        matchLabels:
          key3: value5
